memverses user, db sql
